--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,7 +207,7 @@ a {
 
 /* HEADER-EXPERIENCE */
 .header-experience {
-    margin-top: 110px;
+    /* margin-top: 10px; */
     display: flex;
     gap: 0 30px;
 }
