--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1199,16 +1199,16 @@ a {
     right: 20px;
     bottom: 40px;
     z-index: 999;
-    background: #ffe259; /* fallback for old browsers */
+    background: #f12711; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to right,
-        #ffa751,
-        #ffe259
+        #f5af19,
+        #f12711
     ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
         to right,
-        #ffa751,
-        #ffe259
+        #f5af19,
+        #f12711
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     box-shadow: 0px 2px 4px 0px #00000026;
