Update forgot password page

--- a/views/admin/pages/forgot-password.pug
+++ b/views/admin/pages/forgot-password.pug
@@ -1,7 +1,5 @@
 extends ../layouts/account.pug
 
-block title
-  title Quên mật khẩu
 
 block main
   .form-account
@@ -25,4 +23,4 @@ block main
     
     .inner-more
       span Bạn đã nhớ mật khẩu?
-      a(href="#") Đăng nhập
+      a(href=`/${pathAdmin}/account/login`) Đăng nhập
