--- a/views/admin/pages/dashboard.pug
+++ b/views/admin/pages/dashboard.pug
@@ -1,8 +1,5 @@
 extends ../layouts/default.pug
 
-block title
-  title Tổng quan
-
 block main
   h1.box-title Tổng quan
 
@@ -10,19 +7,19 @@ block main
   .section-1
     .inner-item
       .inner-icon
-        img(src="assets/images/section-1-icon-1.svg")
+        img(src="/admin/assets/images/section-1-icon-1.svg")
       .inner-content
         .inner-title Người dùng
         .inner-number 1.200
     .inner-item
       .inner-icon
-        img(src="assets/images/section-1-icon-2.svg")
+        img(src="/admin/assets/images/section-1-icon-2.svg")
       .inner-content
         .inner-title Đơn hàng
         .inner-number 3.600
     .inner-item
       .inner-icon
-        img(src="assets/images/section-1-icon-3.svg")
+        img(src="/admin/assets/images/section-1-icon-3.svg")
       .inner-content
         .inner-title Doanh thu
         .inner-number 300.000.000đ
@@ -66,7 +63,7 @@ block main
               .inner-list
                 .inner-item
                   .inner-image
-                    img(src="assets/images/tour-1.jpg")
+                    img(src="/admin/assets/images/tour-1.jpg")
                   .inner-content
                     .inner-name Tour Hạ Long
                     .inner-quantity Người lớn: 3 x 1.500.000đ
@@ -74,7 +71,7 @@ block main
                     .inner-quantity Em bé: 2 x 1.000.000đ
                 .inner-item
                   .inner-image
-                    img(src="assets/images/tour-1.jpg")
+                    img(src="/admin/assets/images/tour-1.jpg")
                   .inner-content
                     .inner-name Tour Hạ Long
                     .inner-quantity Người lớn: 3 x 1.500.000đ
