--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
 :root {
-  --color-primary: #4880FF;
+  --color-primary: #4880ff;
   --color-text: #202224;
 }
 
@@ -86,8 +86,8 @@ a {
 .form-account .inner-group .inner-control {
   width: 100%;
   height: 56px;
-  background-color: #F1F4F9;
-  border: 1px solid #D8D8D8;
+  background-color: #f1f4f9;
+  border: 1px solid #d8d8d8;
   border-radius: 8px;
   padding: 0 16px;
   font-weight: 600;
@@ -97,7 +97,7 @@ a {
 }
 
 .form-account .inner-group .inner-control::placeholder {
-  color: #A6A6A6;
+  color: #a6a6a6;
 }
 
 .form-account .inner-group .inner-control.just-validate-error-field {
@@ -250,7 +250,7 @@ a {
 /* Header */
 .header {
   background-color: #fff;
-  border-bottom: 1px solid #E0E0E0;
+  border-bottom: 1px solid #e0e0e0;
   height: 70px;
   position: fixed;
   top: 0;
@@ -302,7 +302,7 @@ a {
 .header .inner-notify span {
   height: 16px;
   min-width: 16px;
-  background-color: #F93C65;
+  background-color: #f93c65;
   font-weight: 700;
   font-size: 12px;
   color: #fff;
@@ -382,7 +382,7 @@ a {
 /* Sider */
 .sider {
   background-color: #fff;
-  border-right: 1px solid #E0E0E0;
+  border-right: 1px solid #e0e0e0;
   width: 240px;
   height: calc(100vh - 70px);
   position: fixed;
@@ -392,11 +392,11 @@ a {
 }
 
 .sider::-webkit-scrollbar {
-	width: 3px;
+  width: 3px;
 }
 
 .sider::-webkit-scrollbar-thumb {
-	background-color: #ddd;
+  background-color: #ddd;
 }
 
 .sider .inner-menu {
@@ -442,12 +442,12 @@ a {
 }
 
 .sider .inner-menu li a.inner-logout {
-  color: #F93C65;
+  color: #f93c65;
 }
 
 .sider hr {
   margin: 16px 0;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
 }
 
 .sider-overlay {
@@ -487,7 +487,7 @@ a {
   position: absolute;
   top: 70px;
   left: 240px;
-  background-color: #F5F6FA;
+  background-color: #f5f6fa;
   width: calc(100% - 240px);
   min-height: calc(100vh - 70px);
   padding: 30px;
@@ -573,7 +573,7 @@ a {
 .section-2 {
   margin-top: 30px;
   background-color: #fff;
-  box-shadow: 6px 6px 54px 0px #0000000D;
+  box-shadow: 6px 6px 54px 0px #0000000d;
   border-radius: 14px;
   padding: 32px;
 }
@@ -596,7 +596,7 @@ a {
 
 .section-2 .inner-head .inner-filter input {
   height: 28px;
-  border: 1px solid #D5D5D5;
+  border: 1px solid #d5d5d5;
   border-radius: 4px;
   width: 180px;
   padding: 0 16px;
@@ -619,7 +619,7 @@ a {
 .section-3 {
   margin-top: 30px;
   background-color: #fff;
-  box-shadow: 6px 6px 54px 0px #0000000D;
+  box-shadow: 6px 6px 54px 0px #0000000d;
   border-radius: 14px;
   padding: 32px;
 }
@@ -645,7 +645,7 @@ a {
 }
 
 .table-1 thead th {
-  background-color: #F1F4F9;
+  background-color: #f1f4f9;
   padding: 14px 24px;
   text-align: left;
   font-weight: 700;
@@ -733,17 +733,17 @@ a {
 
 .badge-orange {
   background-color: rgba(255, 168, 87, 0.2);
-  color: #FFA756;
+  color: #ffa756;
 }
 
 .badge-green {
   background-color: rgba(0, 182, 155, 0.2);
-  color: #00B69B;
+  color: #00b69b;
 }
 
 .badge-red {
   background-color: rgba(239, 55, 38, 0.2);
-  color: #EF3826;
+  color: #ef3826;
 }
 /* End Badge */
 
@@ -755,8 +755,8 @@ a {
 .section-4 .inner-wrap {
   display: inline-flex;
   flex-wrap: wrap;
-  border: 1px solid #D5D5D5;
-  background-color: #FFFFFF;
+  border: 1px solid #d5d5d5;
+  background-color: #ffffff;
   border-radius: 14px;
 }
 
@@ -765,7 +765,7 @@ a {
   display: inline-flex;
   align-items: center;
   gap: 12px;
-  border-right: 1px solid #D5D5D5;
+  border-right: 1px solid #d5d5d5;
   font-weight: 700;
   font-size: 14px;
   color: var(--color-text);
@@ -795,7 +795,7 @@ a {
 
 .section-4 .inner-reset {
   font-weight: 600;
-  color: #EA0234;
+  color: #ea0234;
   cursor: pointer;
 }
 
@@ -821,8 +821,8 @@ a {
 .section-5 .inner-change-status {
   display: inline-flex;
   flex-wrap: wrap;
-  border: 1px solid #D5D5D5;
-  background-color: #FFFFFF;
+  border: 1px solid #d5d5d5;
+  background-color: #ffffff;
   border-radius: 14px;
 }
 
@@ -831,7 +831,7 @@ a {
   display: inline-flex;
   align-items: center;
   gap: 12px;
-  border-right: 1px solid #D5D5D5;
+  border-right: 1px solid #d5d5d5;
   font-weight: 700;
   font-size: 14px;
   color: var(--color-text);
@@ -852,7 +852,7 @@ a {
 
 .section-5 .inner-change-status .inner-item button {
   font-weight: 600;
-  color: #EA0234;
+  color: #ea0234;
   background-color: transparent;
   cursor: pointer;
   border: 0;
@@ -861,7 +861,7 @@ a {
 
 .section-5 .inner-search {
   background-color: #fff;
-  border: 1px solid #E2E2E2;
+  border: 1px solid #e2e2e2;
   border-radius: 14px;
   padding: 0 24px;
   display: inline-flex;
@@ -887,7 +887,8 @@ a {
   color: #979797;
 }
 
-.section-5 .inner-button-create button {
+.section-5 .inner-button-create button,
+.section-5 .inner-button-create a {
   background-color: var(--color-primary);
   border-radius: 14px;
   opacity: 0.9;
@@ -899,11 +900,15 @@ a {
   border: 0;
   cursor: pointer;
   min-height: 42px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.section-5 .inner-button-trash button {
-  background-color: #EF382633;
-  color: #EF3826;
+.section-5 .inner-button-trash button,
+.section-5 .inner-button-create button {
+  background-color: #ef382633;
+  color: #ef3826;
   font-weight: 700;
   font-size: 14px;
   border: 0;
@@ -912,6 +917,9 @@ a {
   border-radius: 14px;
   cursor: pointer;
   min-height: 42px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 991.98px) {
@@ -940,7 +948,7 @@ a {
 
 .table-2 table {
   background-color: #fff;
-  border: 1px solid #B9B9B9;
+  border: 1px solid #b9b9b9;
   border-radius: 14px;
   overflow: hidden;
   width: 100%;
@@ -948,8 +956,8 @@ a {
 }
 
 .table-2 table thead tr th {
-  border-bottom: 1px solid #D5D5D5;
-  background-color: #FCFDFD;
+  border-bottom: 1px solid #d5d5d5;
+  background-color: #fcfdfd;
   padding: 14px;
   font-weight: 800;
   font-size: 14px;
@@ -967,7 +975,7 @@ a {
 }
 
 .table-2 table tbody tr td {
-  border-bottom: 1px solid #D5D5D5;
+  border-bottom: 1px solid #d5d5d5;
   padding: 8px 14px;
   font-weight: 600;
   font-size: 14px;
@@ -991,9 +999,9 @@ a {
 
 .table-2 table tbody tr td .inner-buttons {
   display: inline-flex;
-  border: 1px solid #D5D5D5;
+  border: 1px solid #d5d5d5;
   border-radius: 8px;
-  background-color: #FAFBFD;
+  background-color: #fafbfd;
 }
 
 .table-2 table tbody tr td .inner-buttons button {
@@ -1003,7 +1011,7 @@ a {
   outline: none;
   background-color: transparent;
   cursor: pointer;
-  border-right: 1px solid #D5D5D5;
+  border-right: 1px solid #d5d5d5;
 }
 
 .table-2 table tbody tr td .inner-buttons button:last-child {
@@ -1015,13 +1023,13 @@ a {
 }
 
 .table-2 table tbody tr td .inner-buttons .inner-delete {
-  color: #EF3826;
+  color: #ef3826;
 }
 
 .table-2 .inner-code {
   font-weight: 700;
   font-size: 14px;
-  color: #4880FF;
+  color: #4880ff;
 }
 
 .table-2 .inner-list {
@@ -1081,9 +1089,9 @@ a {
 }
 
 .section-7 .inner-pagination {
-  border: 1px solid #D5D5D5;
+  border: 1px solid #d5d5d5;
   border-radius: 8px;
-  background-color: #FAFBFD;
+  background-color: #fafbfd;
   outline: none;
   padding: 6px 14px;
   font-weight: 600;
@@ -1095,7 +1103,7 @@ a {
 /* Section 8 */
 .section-8 {
   background-color: #fff;
-  border: 1px solid #B9B9B9;
+  border: 1px solid #b9b9b9;
   border-radius: 14px;
   padding: 50px;
 }
@@ -1128,8 +1136,8 @@ a {
 .section-8 form .inner-group input,
 .section-8 form .inner-group select,
 .section-8 form .inner-group textarea {
-  background-color: #F5F6FA;
-  border: 1px solid #D5D5D5;
+  background-color: #f5f6fa;
+  border: 1px solid #d5d5d5;
   border-radius: 4px;
   width: 100%;
   height: 52px;
@@ -1211,8 +1219,8 @@ a {
 }
 
 .section-8 form .inner-checkbox-list {
-  border: 1px solid #D5D5D5;
-  background-color: #F5F6FA;
+  border: 1px solid #d5d5d5;
+  background-color: #f5f6fa;
   border-radius: 4px;
   padding: 14px 23px;
   display: flex;
@@ -1247,7 +1255,7 @@ a {
 }
 
 .section-8 form .inner-schedule .inner-schedule-item {
-  border: 1px solid #D5D5D5;
+  border: 1px solid #d5d5d5;
   background-color: #fff;
   border-radius: 4px;
   padding: 20px;
@@ -1261,11 +1269,11 @@ a {
 .section-8 form .inner-schedule .inner-schedule-button {
   width: 52px;
   height: 52px;
-  border: 1px solid #D5D5D5;
-  background-color: #F5F6FA;
+  border: 1px solid #d5d5d5;
+  background-color: #f5f6fa;
   border-radius: 4px;
   font-size: 18px;
-  color: #A6A6A6;
+  color: #a6a6a6;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -1277,7 +1285,7 @@ a {
 }
 
 .section-8 form .inner-schedule .inner-schedule-button.inner-remove {
-  color: #EF3826;
+  color: #ef3826;
 }
 
 .section-8 form .inner-schedule .inner-schedule-head input {
@@ -1288,7 +1296,11 @@ a {
   margin-top: 15px;
 }
 
-.section-8 form .inner-schedule .inner-schedule-item.hidden .inner-schedule-body {
+.section-8
+  form
+  .inner-schedule
+  .inner-schedule-item.hidden
+  .inner-schedule-body {
   display: none;
 }
 
@@ -1297,7 +1309,7 @@ a {
 }
 
 .section-8 form .inner-schedule .inner-schedule-create {
-  background-color: #D5D5D5;
+  background-color: #d5d5d5;
   border-radius: 4px;
   opacity: 0.9;
   padding: 10px 20px;
@@ -1358,7 +1370,7 @@ a {
 
 .section-8 form .inner-order-price {
   font-weight: 700;
-  color: #EF3826;
+  color: #ef3826;
 }
 
 .section-8 form .inner-upload-image {
@@ -1388,8 +1400,8 @@ a {
 }
 
 .section-8 form .inner-upload-image .filepond--panel-root {
-  border: 1px solid #D5D5D5;
-  background-color: #F5F6FA !important;
+  border: 1px solid #d5d5d5;
+  background-color: #f5f6fa !important;
   border-radius: 4px;
 }
 
@@ -1398,7 +1410,7 @@ a {
 }
 
 .section-8 form .inner-upload-image .filepond--action-remove-item {
-  background: #F93C65;
+  background: #f93c65;
   width: 22px;
   height: 22px;
   top: 0;
@@ -1453,7 +1465,7 @@ a {
 .section-9 .inner-item .inner-icon {
   width: 70px;
   height: 70px;
-  background-color: #E7EDFF;
+  background-color: #e7edff;
   border-radius: 50%;
   display: inline-flex;
   align-items: center;
@@ -1489,7 +1501,7 @@ a {
 
 /* Section 10 */
 .section-10 {
-  border: 1px solid #B9B9B9;
+  border: 1px solid #b9b9b9;
   background-color: #fff;
   border-radius: 14px;
   padding: 80px;
