Update order list page

--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -11,7 +11,7 @@ header.header
       .inner-avatar
         img(src="/admin/assets/images/avatar.jpg")
       .inner-text
-        .inner-name Le Van A
+        .inner-name Trương Quốc Dũng
         .inner-role Admin
     button.inner-button-menu
       <i class="fa-solid fa-bars"></i>
