--- a/views/admin/pages/order-list.pug
+++ b/views/admin/pages/order-list.pug
@@ -1,8 +1,5 @@
 extends ../layouts/default.pug
 
-block title
-  title Quản lý đơn hàng
-
 block main
   h1.box-title Quản lý đơn hàng
 
@@ -69,7 +66,7 @@ block main
               .inner-list
                 .inner-item
                   .inner-image
-                    img(src="assets/images/tour-1.jpg", alt="Tour Hạ Long")
+                    img(src="/admin/assets/images/tour-1.jpg", alt="Tour Hạ Long")
                   .inner-content
                     .inner-name Tour Hạ Long
                     .inner-quantity Người lớn: 3 x 1.500.000đ
@@ -77,7 +74,7 @@ block main
                     .inner-quantity Em bé: 2 x 1.000.000đ
                 .inner-item
                   .inner-image
-                    img(src="assets/images/tour-1.jpg", alt="Tour Hạ Long")
+                    img(src="/admin/assets/images/tour-1.jpg", alt="Tour Hạ Long")
                   .inner-content
                     .inner-name Tour Hạ Long
                     .inner-quantity Người lớn: 3 x 1.500.000đ
