Update account admin create page

--- a/views/admin/pages/setting-account-admin-list.pug
+++ b/views/admin/pages/setting-account-admin-list.pug
@@ -43,7 +43,7 @@ block main
         <i class="fa-solid fa-magnifying-glass"></i>
         input(type="text" placeholder="Tìm kiếm")
       .inner-button-create
-        a(href=`/${pathAdmin}/account-admin/create`)  + Tạo mới
+        a(href=`/${pathAdmin}/setting/account-admin/create`)  + Tạo mới
   //- End Section 5
 
   //- Section 6
