Update website info page

--- a/views/admin/pages/setting-website-info.pug
+++ b/views/admin/pages/setting-website-info.pug
@@ -1,8 +1,5 @@
 extends ../layouts/default.pug
 
-block title
-  title Thông tin website
-
 block main
   h1.box-title Thông tin website
 
@@ -10,13 +7,13 @@ block main
     form#setting-website-info-form
       .inner-group
         label(class="inner-label" for="websiteName") Tên website
-        input(type="text" id="websiteName" name="websiteName" value="28.TRAVEL")
+        input(type="text" id="websiteName" name="websiteName" value="TQD.TRAVEL")
       .inner-group
         label(class="inner-label" for="phone") Số điện thoại
         input(type="text" id="phone" name="phone" value="0123456789")
       .inner-group
         label(class="inner-label" for="email") Email
-        input(type="text" id="email" name="email" value="contact@28.travel.com")
+        input(type="text" id="email" name="email" value="truongquocdung2004@gmail.com")
       .inner-group
         label(class="inner-label" for="address") Địa chỉ
         input(type="text" id="address" name="address" value="Số 123, đường ABC")
@@ -31,4 +28,4 @@ block main
       .inner-button.inner-two-col
         button Cập nhật
     .inner-back
-      a(href="#") Quay lại danh sách
+      a(href=`/${pathAdmin}/setting/list`) Quay lại danh sách
