Fix layout link

--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -1,6 +1,6 @@
 header.header
   .inner-logo
-    a(href="#")
+    a(href=`/${pathAdmin}/dashboard`)
       span TQD
       span Admin
   .inner-wrap
