--- a/views/client/pages/cart.pug
+++ b/views/client/pages/cart.pug
@@ -18,14 +18,14 @@ block main
               input.inner-check(type="checkbox")
             .inner-product
               .inner-image
-                a(href="./tour-details.html")
+                a(href="/tours/detail")
                   img(
                     alt="" 
-                    src="/assets/images/banner-16.jpg"
+                    src="/assets/images/phap-thuysi-y.jpg"
                     )
               .inner-content
                 .inner-title
-                  a(href="./tour-details.html") Tour Châu Âu Đón Noel | 11N10D | Pháp – Thụy Sĩ – Ý
+                  a(href="/tours/detail") Tour Châu Âu | 11N10D | Pháp – Thụy Sĩ – Ý
                 .inner-meta
                   .inner-meta-item
                     | Mã Tour:
