--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -14,11 +14,11 @@ footer.footer
       nav.inner-links
         ul
           li
-            a(href="./home.pug") Trang Chủ
+            a(href="/") Trang Chủ
           li
-            a(href="./domestic-tours.pug") Tour Trong Nước
+            a(href="/tours") Tour Trong Nước
           li
-            a(href="./domestic-tours.pug") Tour Nước Ngoài
+            a(href="/tours") Tour Nước Ngoài
           li
             a(href="#") Tin Tức
           li
@@ -52,7 +52,7 @@ footer.footer
     .inner-bottom
       .inner-copyright © 2025 TQD. All rights reserved.
       .inner-logo
-        a(href="./home.pug")
+        a(href="/")
           img(
             alt="" 
             src="/assets/images/logo.svg"
