--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -5,7 +5,7 @@ header.header
       button.inner-menu-mobile
         i.fa-solid.fa-bars
       .inner-logo
-        a(href="./home.pug")
+        a(href="/")
           img(
             alt="TQD.TRAVEL" 
             src="/assets/images/logo.svg"
@@ -13,38 +13,38 @@ header.header
       nav.inner-menu
         ul
           li
-            a.active(href="./home.pug") Trang chủ
+            a.active(href="/") Trang chủ
           li
-            a(href="#") Tour Trong Nước
+            a(href="/tours") Tour Trong Nước
             i.fa-solid.fa-caret-down
             ul
               li
-                a.active(href="./domestic-tours.pug") Tour Miền Bắc
+                a.active(href="/tours") Tour Miền Bắc
               li
-                a(href="./domestic-tours.pug") Tour Miền Trung
+                a(href="/tours") Tour Miền Trung
               li
-                a(href="./domestic-tours.pug") Tour Miền Nam
+                a(href="/tours") Tour Miền Nam
               li
-                a(href="./domestic-tours.pug") Tour Xuyên Việt
+                a(href="/tours") Tour Xuyên Việt
           li
-            a(href="#") Tour Nước Ngoài
+            a(href="/tours") Tour Nước Ngoài
             i.fa-solid.fa-caret-down
             ul
               li
-                a(href="./domestic-tours.pug") Tour Châu Á
+                a(href="/tours") Tour Châu Á
               li
-                a(href="./domestic-tours.pug") Tour Châu Âu
+                a(href="/tours") Tour Châu Âu
               li
-                a(href="./domestic-tours.pug") Tour Châu Mỹ
+                a(href="/tours") Tour Châu Mỹ
               li
-                a(href="./domestic-tours.pug") Tour Châu Úc
+                a(href="/tours") Tour Châu Úc
           li
             a(href="#") Tin Tức
           li
             a(href="#") Liên hệ
         .inner-overlay
       .inner-cart
-        a(href="./cart.pug")
+        a(href="/cart")
           i.fa-solid.fa-cart-shopping
           span 1
 // End Header
