--- a/views/client/pages/home.pug
+++ b/views/client/pages/home.pug
@@ -44,7 +44,7 @@ block main
                   .inner-item-image
                     img(
                       alt="" 
-                      src="/assets/images/product-1.jpg"
+                      src="/assets/images/japan.jpg"
                       )
                   .inner-item-content
                     .inner-item-title Nhật Bản
@@ -53,7 +53,7 @@ block main
                   .inner-item-image
                     img(
                       alt="" 
-                      src="/assets/images/product-2.jpg"
+                      src="/assets/images/phu-quoc.jpg"
                       )
                   .inner-item-content
                     .inner-item-title Phú Quốc
@@ -62,7 +62,7 @@ block main
                   .inner-item-image
                     img(
                       alt="" 
-                      src="/assets/images/product-3.jpg"
+                      src="/assets/images/singapore.jpg"
                       )
                   .inner-item-content
                     .inner-item-title Singapore
@@ -113,7 +113,7 @@ block main
     // Section 2
     var productListSection2 = [
       {
-        avatar: "/assets/images/product-1.jpg",
+        avatar: "/assets/images/hanoi-laocai-sapa.jpg",
         slug: "#",
         discount: 30,
         name: "Hà Nội - Lào Cai - SaPa 4N3D",
@@ -127,7 +127,7 @@ block main
         stock: 10
       },
       {
-        avatar: "/assets/images/product-2.jpg",
+        avatar: "/assets/images/phuquoc-thienduongbaongoc.jpg",
         slug: "#",
         discount: 0,
         name: "Tour 2024 Phú Quốc - Thiên Đường Đảo Ngọc (3N2D)",
@@ -141,7 +141,7 @@ block main
         stock: 15
       },
       {
-        avatar: "/assets/images/product-3.jpg",
+        avatar: "/assets/images/danang-hoian-banahill.jpg",
         slug: "#",
         discount: 30,
         name: "Combo Đà Nẵng 2024: Đà Nẵng - Hội An - BÀ NÀ HILL",
@@ -155,7 +155,7 @@ block main
         stock: 20
       },
       {
-        avatar: "/assets/images/product-3.jpg",
+        avatar: "/assets/images/danang-hoian-banahill.jpg",
         slug: "#",
         discount: 30,
         name: "Combo Đà Nẵng 2024: Đà Nẵng - Hội An - BÀ NÀ HILL",
@@ -224,35 +224,35 @@ block main
         .swiper-wrapper
           .swiper-slide
             .inner-item
-              a(href="./tour-details.pug")
+              a(href="/tours/detail")
                 img(
                   alt="" 
                   src="/assets/images/banner-1.png"
                   )
           .swiper-slide
             .inner-item
-              a(href="./tour-details.pug")
+              a(href="/tours/detail")
                 img(
                   alt="" 
                   src="/assets/images/banner-2.png"
                   )
           .swiper-slide
             .inner-item
-              a(href="./tour-details.pug")
+              a(href="/tours/detail")
                 img(
                   alt="" 
                   src="/assets/images/banner-3.png"
                   )
           .swiper-slide
             .inner-item
-              a(href="./tour-details.pug")
+              a(href="/tours/detail")
                 img(
                   alt="" 
                   src="/assets/images/banner-2.png"
                   )
           .swiper-slide
             .inner-item
-              a(href="./tour-details.pug")
+              a(href="/tours/detail")
                 img(
                   alt="" 
                   src="/assets/images/banner-3.png"
@@ -264,7 +264,7 @@ block main
   -
     var productListSection4 = [
       {
-        avatar: "/assets/images/product-1.jpg",
+        avatar: "/assets/images/hanoi-laocai-sapa.jpg",
         slug: "#",
         discount: 30,
         name: "Hà Nội - Lào Cai - SaPa 4N3D",
@@ -278,7 +278,7 @@ block main
         stock: 10
       },
       {
-        avatar: "/assets/images/product-2.jpg",
+        avatar: "/assets/images/phuquoc-thienduongbaongoc.jpg",
         slug: "#",
         discount: 0,
         name: "Tour 2024 Phú Quốc - Thiên Đường Đảo Ngọc (3N2D)",
@@ -292,7 +292,7 @@ block main
         stock: 15
       },
       {
-        avatar: "/assets/images/product-3.jpg",
+        avatar: "/assets/images/danang-hoian-banahill.jpg",
         slug: "#",
         discount: 30,
         name: "Combo Đà Nẵng 2024: Đà Nẵng - Hội An - BÀ NÀ HILL",
@@ -306,7 +306,7 @@ block main
         stock: 20
       },
       {
-        avatar: "/assets/images/product-3.jpg",
+        avatar: "/assets/images/danang-hoian-banahill.jpg",
         slug: "#",
         discount: 30,
         name: "Combo Đà Nẵng 2024: Đà Nẵng - Hội An - BÀ NÀ HILL",
@@ -339,7 +339,7 @@ block main
         data-aos-duration="800" 
         data-aos="fade-up"
         )
-        a.button-outline(href="./domestic-tours.pug") Xem tất cả
+        a.button-outline(href="/tours") Xem tất cả
   // End Section 4
   // Section 6
   -
@@ -348,7 +348,7 @@ block main
         avatar: "/assets/images/product-1.jpg",
         slug: "#",
         discount: 30,
-        name: "Hà Nội - Lào Cai - SaPa 4N3D",
+        name: "Sydney - Úc",
         priceOld: 13650000,
         priceNew: 2590000,
         code: "TOUR000001",
@@ -362,7 +362,7 @@ block main
         avatar: "/assets/images/product-2.jpg",
         slug: "#",
         discount: 0,
-        name: "Tour 2024 Phú Quốc - Thiên Đường Đảo Ngọc (3N2D)",
+        name: "Rome - Ý",
         priceOld: 12000000,
         priceNew: 12000000,
         code: "TOUR000002",
@@ -376,7 +376,7 @@ block main
         avatar: "/assets/images/product-3.jpg",
         slug: "#",
         discount: 30,
-        name: "Combo Đà Nẵng 2024: Đà Nẵng - Hội An - BÀ NÀ HILL",
+        name: "Paris - Pháp",
         priceOld: 13650000,
         priceNew: 2590000,
         code: "TOUR000003",
@@ -390,7 +390,7 @@ block main
         avatar: "/assets/images/product-3.jpg",
         slug: "#",
         discount: 30,
-        name: "Combo Đà Nẵng 2024: Đà Nẵng - Hội An - BÀ NÀ HILL",
+        name: "Paris - Pháp",
         priceOld: 13650000,
         priceNew: 2590000,
         code: "TOUR000004",
@@ -420,7 +420,7 @@ block main
         data-aos-duration="800" 
         data-aos="fade-up"
         )
-        a.button-outline(href="./domestic-tours.pug") Xem tất cả
+        a.button-outline(href="/tours") Xem tất cả
   // End Section 6
   // TRAVEL DIARY
   section.travel-diary
